--- a/apps/merchant-app/package.json
+++ b/apps/merchant-app/package.json
@@ -10,7 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@food-platform/shared": "workspace:*",
+    "@food-platform/shared": "*",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
