--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,8 +11,8 @@
     "clean": "rm -rf node_modules .turbo dist"
   },
   "dependencies": {
-    "@food-platform/database": "workspace:*",
-    "@food-platform/shared": "workspace:*",
+    "@food-platform/database": "*",
+    "@food-platform/shared": "*",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.0",
