🔧 Fix workspace dependencies: use workspace:* protocol for Vercel
- Update all workspace dependencies to use workspace:* syntax
- Add vercel.json to user-app for proper monorepo deploy
- Remove root vercel.json (use app-specific config)
- Regenerate pnpm-lock.yaml

--- a/apps/admin-panel/package.json
+++ b/apps/admin-panel/package.json
@@ -10,7 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@food-platform/shared": "*",
+    "@food-platform/shared": "workspace:*",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-tabs": "^1.0.4",
