--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,8 +5,11 @@
   "main": "./src/index.ts",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "build": "tsc && npm run db:generate",
     "start": "node dist/index.js",
+    "db:generate": "prisma generate --schema=../database/prisma/schema.prisma",
+    "db:push": "prisma db push --schema=../database/prisma/schema.prisma",
+    "db:migrate": "prisma migrate deploy --schema=../database/prisma/schema.prisma",
     "typecheck": "tsc --noEmit",
     "clean": "rm -rf node_modules .turbo dist"
   },
