🔧 Fix Railway build - use npm instead of pnpm
- Removed packageManager field (was forcing pnpm)
- Updated nixpacks.toml to use npm install
- Fixed railway.toml build commands

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,12 +2,12 @@
 nixPkgs = ["nodejs_20", "openssl"]
 
 [phases.install]
-cmds = ["npm install -g pnpm", "pnpm install"]
+cmds = ["npm install"]
 
 [phases.build]
 cmds = [
   "cd packages/database && npx prisma generate",
-  "cd packages/api && pnpm run build"
+  "cd packages/api && npm run build"
 ]
 
 [start]
@@ -15,4 +15,3 @@ cmd = "cd packages/api && node dist/index.js"
 
 [variables]
 NODE_ENV = "production"
-
