--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "nixpacks"
-buildCommand = "cd packages/api && npm install && npm run build"
+buildCommand = "npm install && cd packages/database && npx prisma generate && cd ../api && npm run build"
 
 [deploy]
-startCommand = "cd packages/api && npm run start"
+startCommand = "cd packages/api && node dist/index.js"
 healthcheckPath = "/health"
 healthcheckTimeout = 30
 restartPolicyType = "on_failure"
