--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,8 +14,8 @@
     "clean": "rm -rf node_modules .turbo dist"
   },
   "dependencies": {
-    "@food-platform/database": "*",
-    "@food-platform/shared": "*",
+    "@food-platform/database": "0.1.0",
+    "@food-platform/shared": "0.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.0",
