--- a/apps/user-app/vercel.json
+++ b/apps/user-app/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "installCommand": "cd ../.. && pnpm install",
-  "buildCommand": "cd ../.. && pnpm turbo build --filter=@food-platform/user-app",
+  "installCommand": "cd ../.. && npm install",
+  "buildCommand": "cd ../.. && npm run build",
   "outputDirectory": ".next",
   "framework": "nextjs"
 }
