🔧 Remove rootDirectory from vercel.json files
- Vercel doesn't support rootDirectory in vercel.json
- Root directory should be set in Vercel dashboard instead

--- a/apps/admin-panel/vercel.json
+++ b/apps/admin-panel/vercel.json
@@ -3,7 +3,6 @@
   "installCommand": "cd ../.. && npm install",
   "buildCommand": "cd ../.. && npx turbo run build --filter=@food-platform/admin-panel",
   "outputDirectory": ".next",
-  "framework": "nextjs",
-  "rootDirectory": "apps/admin-panel"
+  "framework": "nextjs"
 }
 
